PLS-020 Add distributed compose route assets and architecture diagrams